--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.2.10",
     "react": "19.0.0-rc-8b08e99e-20240713",
-    "react-dom": "19.0.0-rc-8b08e99e-20240713",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-type-animation": "^3.2.0"
   },
@@ -24,6 +24,7 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "imagekitio-react": "^4.2.0",
     "vite": "^5.3.4"
   }
 }
