--- a/backend/package.json
+++ b/backend/package.json
@@ -2,5 +2,15 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "type": "module",
+  "scripts": {
+    "dev": "nodemon --env-file .env index.js"
+  },
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "imagekit": "^5.0.1",
+    "nodemon": "^3.1.4"
+  }
 }
