--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.2.10",
+    "@google/generative-ai": "^0.16.0",
     "react": "19.0.0-rc-8b08e99e-20240713",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
