--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.2.10",
     "@google/generative-ai": "^0.16.0",
-    "react": "19.0.0-rc-8b08e99e-20240713",
+    "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.25.1",
     "react-type-animation": "^3.2.0"
   },
