--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.0.20",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "imagekit": "^5.0.1",
