--- a/backend/package.json
+++ b/backend/package.json
@@ -9,13 +9,12 @@
   "license": "MIT",
   "dependencies": {
     "@clerk/clerk-sdk-node": "^5.0.20",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "imagekit": "^5.0.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
-    "nodemon": "^3.1.4",
-    "path": "^0.12.7",
-    "url": "^0.11.4"
+    "nodemon": "^3.1.4"
   }
 }
