--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "@clerk/clerk-sdk-node": "^5.0.20",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.19.2",
     "imagekit": "^5.0.1",
     "mongodb": "^6.8.0",
